Replace all absolute SASS imports with relative imports

--- a/libs/ui/cozy-ui/src/atoms/Text/Text.scss
+++ b/libs/ui/cozy-ui/src/atoms/Text/Text.scss
@@ -1,6 +1,6 @@
 // ! Copyright (c) 2024, Brandon Ramirez, brr.dev
 
-@import '/src/theme';
+@import '../..//theme';
 
 // TODO update the fonts to use theme variables
 // TODO add better styling support
