--- a/libs/ui/cozy-ui/src/atoms/Button/Button.scss
+++ b/libs/ui/cozy-ui/src/atoms/Button/Button.scss
@@ -1,6 +1,6 @@
 // ! Copyright (c) 2024, Brandon Ramirez, brr.dev
 
-@import '/src/theme';
+@import '../../theme/';
 
 .ui-button {
     // Button colors
