--- a/libs/ui/cozy-ui/src/atoms/Input/Input.scss
+++ b/libs/ui/cozy-ui/src/atoms/Input/Input.scss
@@ -1,6 +1,6 @@
 // ! Copyright (c) 2024, Brandon Ramirez, brr.dev
 
-@import '/src/theme';
+@import '../../theme';
 
 // Top-level input component wrapper
 .ui-input-field-wrapper {
